--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="亞弗雷麵包坊" />
     <meta property="og:description" content="亞弗雷麵包坊，剛出爐的新鮮麵包，最新的烘焙技術與百分百的天然酵母，健康美味一應俱全！" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://kevin8521883.github.io/Bootstrap-final/ckeckout-1.html" />
+    <meta property="og:url" content="https://kevin8521883.github.io/Bootstrap-final/" />
     <meta property="og:image" content="https://upload.cc/i1/2019/12/19/R7mTsE.png"/>
     <title>亞弗雷麵包坊 | 登入</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
