更改網頁色彩及一些排版

--- a/cart.html
+++ b/cart.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="亞弗雷麵包坊，剛出爐的新鮮麵包，最新的烘焙技術與百分百的天然酵母，健康美味一應俱全！" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://kevin8521883.github.io/Bootstrap-final/" />
-    <meta property="og:image" content="https://upload.cc/i1/2019/12/19/R7mTsE.png"/>
+    <meta property="og:image" content="https://upload.cc/i1/2019/12/19/R7mTsE.png" />
     <title>亞弗雷麵包坊 | 購物車</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="stylesheets/all.css">
@@ -61,7 +61,7 @@
             <div class="row">
                 <div class="col-md-8 mb-9">
                     <div class="card border-0 rounded-0">
-                        <div class="card-header bg-accent rounded-0 mb-md-0 mb-30">
+                        <div class="card-header bg-secondary text-dark rounded-0 mb-md-0 mb-30">
                             <h4 class="text-center">您的購物車</h4>
                         </div>
                         <div class="container p-md-30 cart-item">
@@ -77,8 +77,8 @@
                                                 <span>NT$ 130</span>
                                             </div>
                                         </div>
-                                        <div class="col-md-6 d-flex align-items-center">
-                                            <div class="input-group">
+                                        <div class="col-md-6 d-flex align-items-center" style="width: 160px;">
+                                            <div class="input-group carts-input-group">
                                                 <div class="input-group-prepend">
                                                     <button class="btn btn-outline-primary px-3">-</button>
                                                 </div>
@@ -113,8 +113,8 @@
                                                 <span>NT$ 130</span>
                                             </div>
                                         </div>
-                                        <div class="col-md-6 d-flex align-items-center">
-                                            <div class="input-group">
+                                        <div class="col-md-6 d-flex align-items-center" style="width: 160px;">
+                                            <div class="input-group carts-input-group">
                                                 <div class="input-group-prepend">
                                                     <button class="btn btn-outline-primary px-3">-</button>
                                                 </div>
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-9">
-                    <div class="container bg-text-color text-white py-3">
+                    <div class="container bg-primary text-white py-3">
                         <h1 class="h3 text-center pb-3 m-0">訂單摘要</h1>
                         <hr class="bg-white mt-0 mb-3">
                         <div class="d-flex justify-content-between mb-2">
@@ -155,7 +155,7 @@
                             <span>NT$ 580</span>
                         </div>
                     </div>
-                    <a href="ckeckout-1.html" class="btn btn-accent d-block p-3">結帳去</a>
+                    <a href="checkout-1.html" class="btn btn-secondary d-block p-3">結帳去</a>
                 </div>
             </div>
         </div>
@@ -163,21 +163,21 @@
     <!--　footer -->
     <footer>
         <!-- 信箱 -->
-        <div class="container-fluid bg-text-color">
+        <div class="container-fluid bg-primary">
             <div class="container ">
                 <div class="row py-30">
                     <div class="col-md-6 pb-30 pb-md-0 d-flex align-items-center justify-content-center">
                         <img class="img-fluid" src="images/logo.png" width="50" alt="">
                         <h4 class="text-white">訂閱你我的香噴噴郵件</h4>
                     </div>
-                    <div class="col-md-6  text-center">
+                    <div class="col-md-6 text-center">
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <i class="input-group-text bg-white text-text-color border-0 fas fa-envelope px-3"></i>
                             </div>
                             <input type="email" class="form-control border-0 p-4" required>
                             <div class="input-group-append">
-                                <a href="#" class="input-group-text border-0 btn px-3 bg-accent">
+                                <a href="#" class="input-group-text bg-accent border-0 btn px-3">
                                     <i class=" fas fa-arrow-right"></i></a>
                             </div>
                         </div>
@@ -186,31 +186,33 @@
             </div>
         </div>
         <!-- 表尾 -->
-        <div class="container-fluid bg-light">
+        <div class="container-fluid bg-secondary">
             <div class="container py-30">
                 <div class="row ">
                     <div class="col-md-6 d-flex flex-column justify-content-between">
-                        <h1 class="text-primary font-weight-bold">亞弗雷麵包坊</h1>
-                        <div class="text-primary">
+                        <h1 class="text-text-color font-weight-bold">亞弗雷麵包坊</h1>
+                        <div class="text-text-color">
                             04-1234-567 <br>
                             aexck8836660@gmail.com <br>
                             500彰化縣彰化市溫泉路31號 <br>
                         </div>
                     </div>
                     <div class="col-md-6 d-flex justify-content-end ">
-                        <h4 class="m-0 d-none d-md-block word-colum text-primary font-weight-bold"
+                        <h4 class="m-0 d-none d-md-block word-colum text-text-color font-weight-bold"
                             style="letter-spacing: 0.5rem;">
                             今天是個<br>
                             　吃麵包的好日子</h4>
                     </div>
                 </div>
                 <div class="row mt-3">
-                    <div class="col-md-6">
-                        <a href="#" style="font-size:32px;"><i class="fab fa-facebook-square"></i></a>
-                        <a href="#" style="font-size:32px;"><i class="fab fa-twitter-square"></i></a>
-                        <a href="#" style="font-size:32px;"><i class="fab fa-line"></i></a>
+                    <div class="col-md-6 ">
+                        <a href="#" class="text-text-color" style="font-size:32px;"><i
+                                class="fab fa-facebook-square"></i></a>
+                        <a href="#" class="text-text-color" style="font-size:32px;"><i
+                                class="fab fa-twitter-square"></i></a>
+                        <a href="#" class="text-text-color" style="font-size:32px;"><i class="fab fa-line"></i></a>
                     </div>
-                    <div class="col-md-6 d-flex align-items-center justify-content-md-end text-primary">
+                    <div class="col-md-6 d-flex align-items-center justify-content-md-end text-text-color">
                         © 2019 Bread All Rights Reserved
                     </div>
                 </div>
