--- a/checkout-2.html
+++ b/checkout-2.html
@@ -32,7 +32,7 @@
                 <img class="d-none d-md-block" src="images/logo2.png" height="40" alt="">
                 <h1 class="text-primary ml-2 font-weight-bold" style="letter-spacing: 5px;"><em>亞弗雷</em></h1>
             </a>
-            <a href="cart.html" class="navbar-link d-lg-none text-text-color">
+            <a href="cart.html" class="navbar-link d-lg-none ">
                 <i style="font-size:24px" class="fas fa-shopping-cart"></i>
             </a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -141,7 +141,7 @@
                                     </div>
                                 </div>
                                 <a href="checkout-3.html"
-                                    class="sub-link btn btn-accent btn-block p-3 text-dark">下一步</a>
+                                    class="sub-link btn btn-secondary btn-block p-3 text-dark">下一步</a>
                             </form>
                         </div>
                         <!-- 訂單摘要 -->
@@ -149,7 +149,7 @@
                             <div class="row">
                                 <div class="col-12 mb-9">
                                     <div class="card">
-                                        <div class="card-header bg-accent">
+                                        <div class="card-header bg-secondary">
                                             <div class="h3 text-center">訂單摘要</div>
                                         </div>
                                         <div class="card-body">
@@ -170,7 +170,7 @@
                                 </div>
                                 <div class="col-12 mb-9">
                                     <div class="card">
-                                        <div class="card-header bg-accent">
+                                        <div class="card-header bg-secondary">
                                             <div class="h3 text-center">購物清單</div>
                                         </div>
                                         <div class="card-body">
@@ -212,24 +212,24 @@
             </div>
 
     </section>
-    <!--　footer -->
-    <footer>
+   <!--　footer -->
+   <footer>
         <!-- 信箱 -->
-        <div class="container-fluid bg-text-color">
+        <div class="container-fluid bg-primary">
             <div class="container ">
                 <div class="row py-30">
                     <div class="col-md-6 pb-30 pb-md-0 d-flex align-items-center justify-content-center">
                         <img class="img-fluid" src="images/logo.png" width="50" alt="">
                         <h4 class="text-white">訂閱你我的香噴噴郵件</h4>
                     </div>
-                    <div class="col-md-6  text-center">
+                    <div class="col-md-6 text-center">
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <i class="input-group-text bg-white text-text-color border-0 fas fa-envelope px-3"></i>
                             </div>
                             <input type="email" class="form-control border-0 p-4" required>
                             <div class="input-group-append">
-                                <a href="#" class="input-group-text border-0 btn px-3 bg-accent">
+                                <a href="#" class="input-group-text bg-accent border-0 btn px-3">
                                     <i class=" fas fa-arrow-right"></i></a>
                             </div>
                         </div>
@@ -238,31 +238,31 @@
             </div>
         </div>
         <!-- 表尾 -->
-        <div class="container-fluid bg-light">
+        <div class="container-fluid bg-secondary">
             <div class="container py-30">
                 <div class="row ">
                     <div class="col-md-6 d-flex flex-column justify-content-between">
-                        <h1 class="text-primary font-weight-bold">亞弗雷麵包坊</h1>
-                        <div class="text-primary">
+                        <h1 class="text-text-color font-weight-bold">亞弗雷麵包坊</h1>
+                        <div class="text-text-color">
                             04-1234-567 <br>
                             aexck8836660@gmail.com <br>
                             500彰化縣彰化市溫泉路31號 <br>
                         </div>
                     </div>
                     <div class="col-md-6 d-flex justify-content-end ">
-                        <h4 class="m-0 d-none d-md-block word-colum text-primary font-weight-bold"
+                        <h4 class="m-0 d-none d-md-block word-colum text-text-color font-weight-bold"
                             style="letter-spacing: 0.5rem;">
                             今天是個<br>
                             　吃麵包的好日子</h4>
                     </div>
                 </div>
                 <div class="row mt-3">
-                    <div class="col-md-6">
-                        <a href="#" style="font-size:32px;"><i class="fab fa-facebook-square"></i></a>
-                        <a href="#" style="font-size:32px;"><i class="fab fa-twitter-square"></i></a>
-                        <a href="#" style="font-size:32px;"><i class="fab fa-line"></i></a>
+                    <div class="col-md-6 ">
+                        <a href="#" class="text-text-color" style="font-size:32px;"><i class="fab fa-facebook-square"></i></a>
+                        <a href="#" class="text-text-color" style="font-size:32px;"><i class="fab fa-twitter-square"></i></a>
+                        <a href="#" class="text-text-color" style="font-size:32px;"><i class="fab fa-line"></i></a>
                     </div>
-                    <div class="col-md-6 d-flex align-items-center justify-content-md-end text-primary">
+                    <div class="col-md-6 d-flex align-items-center justify-content-md-end text-text-color">
                         © 2019 Bread All Rights Reserved
                     </div>
                 </div>
