--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="亞弗雷麵包坊，剛出爐的新鮮麵包，最新的烘焙技術與百分百的天然酵母，健康美味一應俱全！" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://kevin8521883.github.io/Bootstrap-final/" />
-    <meta property="og:image" content="https://upload.cc/i1/2019/12/19/R7mTsE.png"/>
+    <meta property="og:image" content="https://upload.cc/i1/2019/12/19/R7mTsE.png" />
     <title>亞弗雷麵包坊 | 首頁</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="stylesheets/all.css">
@@ -29,9 +29,9 @@
             </button>
             <a class="navbar-brand d-flex align-items-center" href="index.html">
                 <img class="d-none d-md-block" src="images/logo2.png" height="40" alt="">
-                <h1 class="text-primary ml-2 font-weight-bold" style="letter-spacing: 5px;"><em>亞弗雷</em></h1>
+                <div class="h1 text-primary ml-2 font-weight-bold" style="letter-spacing:5px;"><em>亞弗雷</em></div>
             </a>
-            <a href="cart.html" class="navbar-link d-lg-none text-text-color">
+            <a href="cart.html" class="navbar-link d-lg-none mobile-cart">
                 <i style="font-size:24px" class="fas fa-shopping-cart"></i>
             </a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -56,14 +56,15 @@
     </nav>
     <!-- header -->
     <section class="mb-9 mb-lg-10">
-        <div class="container bg-cover header-banner "
-            style="background-image: url(https://images.unsplash.com/photo-1523294587484-bae6cc870010?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1464&q=80);">
+        <div class="container px-0 px-md-3">
+            <div class="bg-cover header-banner"style="background-image: url(https://images.unsplash.com/photo-1523294587484-bae6cc870010?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1464&q=80);">
+            </div>
         </div>
         <div class="container header-menu px-0">
             <div class="row justify-content-center no-gutters">
                 <div class="col-md-10">
                     <div class="row no-gutters">
-                        <a href="#" class="col text-dark bg-cover "
+                        <a href="#" class="col text-dark bg-cover"
                             style=" background-image: url(https://images.unsplash.com/photo-1509440159596-0249088772ff?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=752&q=80);">
                             <div
                                 class="header-menu-bg d-flex align-items-center justify-content-center word-colum w-100 active">
@@ -73,7 +74,7 @@
                         <a href="#" class="col text-dark bg-cover"
                             style=" background-image: url(https://images.unsplash.com/photo-1538732792755-6c2b090a567a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=730&q=80);">
                             <div
-                                class="header-menu-bg d-flex align-items-center justify-content-center word-colum w-100 border-left border-right">
+                                class="header-menu-bg d-flex align-items-center justify-content-center word-colum w-100 border-left border-right border-text-color">
                                 人氣推薦
                             </div>
                         </a> <a href="#" class="col text-dark bg-cover"
@@ -92,10 +93,10 @@
     <h2 class="text-center text-dark text-title mb-9 d-lg-none">
         為什麼<br>　選擇吃麵包？</h2>
     <section class="mb-9 mb-lg-10">
-        <div class="container-fluid px-0 bg-text-color">
+        <div class="bg-secondary">
             <div class="container">
-                <div class="row ">
-                    <div class="col-md-6 my-lg-n20 px-0">
+                <div class="row">
+                    <div class="col-md-6 my-lg-n20 px-0 px-md-3">
                         <div class="banner-img bg-cover"
                             style="background-image: url(https://images.unsplash.com/photo-1550599112-0c21a831f6b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);">
                         </div>
@@ -125,7 +126,7 @@
     <h2 class="text-center text-dark text-title mb-9 d-lg-none">
         為什麼<br>　一定要吃麵包？</h2>
     <section class="mb-9 mb-lg-10">
-        <div class="container-fluid px-0 bg-text-color">
+        <div class="bg-secondary">
             <div class="container">
                 <div class="row flex-column-reverse flex-md-row">
                     <div class="col-md-6 ">
@@ -145,7 +146,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 my-lg-n20 px-0">
+                    <div class="col-md-6 my-lg-n20 px-0 px-md-3">
                         <div class="banner-img bg-cover"
                             style="background-image: url(https://images.unsplash.com/photo-1549592406-47076c45cd02?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);">
                         </div>
@@ -182,20 +183,15 @@
                         <i style="font-size: 24px;" class="fas-heart fas fa-heart d-none"></i>
                     </div>
                 </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-6 text-center border">
-                            <h3 class="text-text-color p-2">英國麵包</h3>
-                        </div>
-                        <div class="col-6 text-center border border-left-0">
-                            <h3 class="text-text-color p-2">NT$ 130</h3>
-                        </div>
+                <div class="row no-gutters">
+                    <div class="col-6 text-center border">
+                        <div class="text-text-color item-box-name">英國麵包</div>
                     </div>
-
+                    <div class="col-6 text-center border border-left-0">
+                        <div class="text-text-color item-box-name"><strong>NT$ 130</strong></div>
+                    </div>
                 </div>
-                <a href="#" class="btn btn-primary d-block p-2">
-                    <h3>加入購物車</h3>
-                </a>
+                <a href="#" class="btn btn-primary d-block item-box-name">加入購物車</a>
             </div>
 
             <div class="col-md-4 mb-9">
@@ -209,19 +205,15 @@
                         <i style="font-size: 24px;" class="fas-heart fas fa-heart d-none"></i>
                     </div>
                 </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-6 text-center border">
-                            <h3 class="text-text-color p-2">法國麵包</h3>
-                        </div>
-                        <div class="col-6 text-center border border-left-0">
-                            <h3 class="text-text-color p-2">NT$ 130</h3>
-                        </div>
+                <div class="row no-gutters">
+                    <div class="col-6 text-center border">
+                        <div class="text-text-color item-box-name">法國麵包</div>
+                    </div>
+                    <div class="col-6 text-center border border-left-0">
+                        <div class="text-text-color item-box-name"><strong>NT$ 130</strong></div>
                     </div>
                 </div>
-                <a href="#" class="btn btn-primary d-block p-2">
-                    <h3>加入購物車</h3>
-                </a>
+                <a href="#" class="btn btn-primary d-block item-box-name">加入購物車</a>
             </div>
 
             <div class="col-md-4 mb-9">
@@ -235,33 +227,30 @@
                         <i style="font-size: 24px;" class="fas-heart fas fa-heart d-none"></i>
                     </div>
                 </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col-6 text-center border">
-                            <h3 class="text-text-color p-2">德國麵包</h3>
-                        </div>
-                        <div class="col-6 text-center border border-left-0">
-                            <h3 class="text-text-color p-2">NT$ 130</h3>
-                        </div>
+                <div class="row no-gutters">
+                    <div class="col-6 text-center border">
+                        <div class="text-text-color item-box-name">德國麵包</div>
+                    </div>
+                    <div class="col-6 text-center border border-left-0">
+                        <div class="text-text-color item-box-name"><strong>NT$ 130</strong></div>
                     </div>
                 </div>
-                <a href="#" class="btn btn-primary d-block p-2">
-                    <h3>加入購物車</h3>
-                </a>
+                <a href="#" class="btn btn-primary d-block item-box-name">加入購物車</a>
             </div>
         </div>
     </div>
+
     <!--　footer -->
     <footer>
         <!-- 信箱 -->
-        <div class="container-fluid bg-text-color">
+        <div class="container-fluid bg-primary">
             <div class="container ">
                 <div class="row py-30">
                     <div class="col-md-6 pb-30 pb-md-0 d-flex align-items-center justify-content-center">
                         <img class="img-fluid" src="images/logo.png" width="50" alt="">
                         <h4 class="text-white">訂閱你我的香噴噴郵件</h4>
                     </div>
-                    <div class="col-md-6  text-center">
+                    <div class="col-md-6 text-center">
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <i class="input-group-text bg-white text-text-color border-0 fas fa-envelope px-3"></i>
@@ -277,31 +266,31 @@
             </div>
         </div>
         <!-- 表尾 -->
-        <div class="container-fluid bg-light">
+        <div class="container-fluid bg-secondary">
             <div class="container py-30">
                 <div class="row ">
                     <div class="col-md-6 d-flex flex-column justify-content-between">
-                        <h1 class="text-primary font-weight-bold">亞弗雷麵包坊</h1>
-                        <div class="text-primary">
+                        <h1 class="text-text-color font-weight-bold">亞弗雷麵包坊</h1>
+                        <div class="text-text-color">
                             04-1234-567 <br>
                             aexck8836660@gmail.com <br>
                             500彰化縣彰化市溫泉路31號 <br>
                         </div>
                     </div>
                     <div class="col-md-6 d-flex justify-content-end ">
-                        <h4 class="m-0 d-none d-md-block word-colum text-primary font-weight-bold"
+                        <h4 class="m-0 d-none d-md-block word-colum text-text-color font-weight-bold"
                             style="letter-spacing: 0.5rem;">
                             今天是個<br>
                             　吃麵包的好日子</h4>
                     </div>
                 </div>
                 <div class="row mt-3">
-                    <div class="col-md-6">
-                        <a href="#" style="font-size:32px;"><i class="fab fa-facebook-square"></i></a>
-                        <a href="#" style="font-size:32px;"><i class="fab fa-twitter-square"></i></a>
-                        <a href="#" style="font-size:32px;"><i class="fab fa-line"></i></a>
+                    <div class="col-md-6 ">
+                        <a href="#" class="text-text-color" style="font-size:32px;"><i class="fab fa-facebook-square"></i></a>
+                        <a href="#" class="text-text-color" style="font-size:32px;"><i class="fab fa-twitter-square"></i></a>
+                        <a href="#" class="text-text-color" style="font-size:32px;"><i class="fab fa-line"></i></a>
                     </div>
-                    <div class="col-md-6 d-flex align-items-center justify-content-md-end text-primary">
+                    <div class="col-md-6 d-flex align-items-center justify-content-md-end text-text-color">
                         © 2019 Bread All Rights Reserved
                     </div>
                 </div>
