--- a/checkout-1.html
+++ b/checkout-1.html
@@ -15,8 +15,11 @@
     <title>亞弗雷麵包坊 | 訂單</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="stylesheets/all.css">
+
 </head>
+
 <body>
+
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light sticky-top py-20 pt-lg-25 pb-lg-15 bg-white">
         <div class="container">
@@ -29,7 +32,7 @@
                 <img class="d-none d-md-block" src="images/logo2.png" height="40" alt="">
                 <h1 class="text-primary ml-2 font-weight-bold" style="letter-spacing: 5px;"><em>亞弗雷</em></h1>
             </a>
-            <a href="cart.html" class="navbar-link d-lg-none ">
+            <a href="cart.html" class="navbar-link d-lg-none text-primary">
                 <i style="font-size:24px" class="fas fa-shopping-cart"></i>
             </a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -43,7 +46,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="login.html">登入</a>
                     </li>
-                    <li class="nav-item d-none d-lg-block  active">
+                    <li class="nav-item d-none d-lg-block active">
                         <a class="nav-link active" href="cart.html"><i style="font-size:24px"
                                 class="fas fa-shopping-cart"></i></a>
                     </li>
@@ -61,83 +64,61 @@
                         <div class="col-md-7">
                             <div class="row no-gutters text-white bg-primary p-30">
                                 <div class="col-6">
-                                    <h1 class="">發票</h1>
+                                    <h1 class="">運送</h1>
                                 </div>
                                 <div class="col-6 d-flex align-items-center">
                                     <div class="progress-steps w-100">
-                                        <div class="progress-item finish">
-                                            <i class="text-primary fas fa-check"></i>
-                                        </div>
-                                        <div class="progress-item finish">
-                                            <i class="text-primary fas fa-check"></i>
-                                        </div>
                                         <div class="progress-item active"></div>
+                                        <div class="progress-item"></div>
+                                        <div class="progress-item"></div>
                                     </div>
                                 </div>
                             </div>
-
                             <form class="needs-validation" novalidate>
-                                <div class="p-30 border border-bottom-0 border-top-0 mx-0">
-                                    <div class="row mb-4">
-                                        <div class="col">
-                                            <div class="form-group">
-                                                <div class="nav d-flex justify-content-center">
-                                                    <a href="#e-invoice" data-toggle="tab"
-                                                        class="btn btn-outline-primary active w-50">電子發票</a>
-                                                    <a href="#invoice" data-toggle="tab"
-                                                        class="btn btn-outline-primary w-50">郵寄發票</a>
-                                                </div>
-                                            </div>
-                                        </div>
+                                <div class="form-row p-30 border border-bottom-0 border-top-0 mx-0">
+                                    <div class="form-group col-6">
+                                        <label for="first-name">姓氏</label>
+                                        <input type="text" class="form-control form-control-input" id="first-name"
+                                            placeholder="王" required>
+                                        <div class="invalid-feedback">請輸入姓氏</div>
                                     </div>
-                                    <div class="tab-content">
-                                        <div class="tab-pane active" id="e-invoice">
-                                            <div class="form-group">
-                                                <label for="email">電子郵件信箱</label>
-                                                <input type="email" class="form-control form-control-input" id="email"
-                                                    placeholder="example@example.com" required>
-                                                    <div class="invalid-feedback">請輸入電子信箱</div>
+                                    <div class="form-group col-6">
+                                        <label for="last-name">名字</label>
+                                        <input type="text" class="form-control form-control-input" id="last-name"
+                                            placeholder="小強" required>
+                                        <div class="invalid-feedback">請輸入名字</div>
+                                    </div>
+                                    <div class="form-group col-12">
+                                        <label for="phone">電話</label>
+                                        <input type="tel" class="form-control form-control-input" id="phone"
+                                            placeholder="0912-354-678" required>
+                                        <div class="invalid-feedback">請輸入電話</div>
+
+                                    </div>
+                                    <div class="form-group col-12">
+                                        <label for="address">住址</label>
+                                        <div class="form-row">
+                                            <div class="col-6">
+                                                <select class="form-control form-control-input" name="city" id="city">
+                                                    <option value="1">彰化縣</option>
+                                                </select>
                                             </div>
-                                            <div class="form-group">
-                                                <label for="invoice-number">統一編號(選填)</label>
-                                                <input type="text" class="form-control form-control-input"
-                                                    id="invoice-number" placeholder="12345678">
+                                            <div class="col-6">
+                                                <select class="form-control form-control-input" name="area" id="area">
+                                                    <option value="1">彰化市</option>
+                                                    <option value="2">員林市</option>
+                                                </select>
                                             </div>
-                                        </div>
-                                        <div class="tab-pane" id="invoice">
-                                            <div class="d-flex justify-content-between">
-                                                <label for="address">住址</label>
-                                                <div class="form-check ">
-                                                    <input type="checkbox" class="form-check-input" name="check"
-                                                        id="check">
-                                                    <label class="form-check-label" for="check">同居住地址</label>
-                                                </div>
-                                            </div>
-                                            <div class="form-row">
-                                                <div class="col-6">
-                                                    <select class="form-control form-control-input" name="city"
-                                                        id="city">
-                                                        <option value="1">彰化縣</option>
-                                                    </select>
-                                                </div>
-                                                <div class="col-6">
-                                                    <select class="form-control form-control-input" name="area"
-                                                        id="area">
-                                                        <option value="1">彰化市</option>
-                                                        <option value="2">員林市</option>
-                                                    </select>
-                                                </div>
-                                                <div class="col-12 mt-3">
-                                                    <input type="text" class="form-control form-control-input"
-                                                        id="address" placeholder="溫泉路 31號">
-                                                    <div class="invalid-feedback">請輸入住址</div>
-                                                </div>
+                                            <div class="col-12 mt-3">
+                                                <input type="text" class="form-control form-control-input" id="address"
+                                                    placeholder="溫泉路 31號" required>
+                                                <div class="invalid-feedback">請輸入住址</div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <a href="checkout-success.html"
-                                    class="sub-link btn btn-secondary btn-block p-3 text-dark">確認結帳</a>
+                                <a href="checkout-2.html"
+                                    class="sub-link btn btn-secondary btn-block p-3 text-dark">下一步</a>
                             </form>
                         </div>
                         <!-- 訂單摘要 -->
