--- a/checkout-success.html
+++ b/checkout-success.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="亞弗雷麵包坊，剛出爐的新鮮麵包，最新的烘焙技術與百分百的天然酵母，健康美味一應俱全！" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://kevin8521883.github.io/Bootstrap-final/" />
-    <meta property="og:image" content="https://upload.cc/i1/2019/12/19/R7mTsE.png"/>
+    <meta property="og:image" content="https://upload.cc/i1/2019/12/19/R7mTsE.png" />
     <title>亞弗雷麵包坊 | 完成</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="stylesheets/all.css">
@@ -32,7 +32,7 @@
                 <img class="d-none d-md-block" src="images/logo2.png" height="40" alt="">
                 <h1 class="text-primary ml-2 font-weight-bold" style="letter-spacing: 5px;"><em>亞弗雷</em></h1>
             </a>
-            <a href="cart.html" class="navbar-link text-text-color d-lg-none">
+            <a href="cart.html" class="navbar-link mobile-cart d-lg-none">
                 <i style="font-size:24px" class=" fas fa-shopping-cart"></i>
             </a>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -56,55 +56,53 @@
         </div>
     </nav>
     <!-- header -->
-    <section class="mb-9 mb-lg-10">
-        <div class="container bg-cover header-banner d-flex justify-content-center"
-            style="background-image: url(https://images.unsplash.com/photo-1501721358449-1505ca840822?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);">
-            <div class="col-8 col-md-4 d-flex justify-content-center flex-column">
-                <div class="row">
-                    <div class="col-12 mb-30">
-                        <div class="progress-steps-dark w-100">
-                            <div class="progress-item finish">
-                                <i class="text-white fas fa-check"></i>
-                            </div>
-                            <div class="progress-item finish">
-                                <i class="text-white fas fa-check"></i>
-                            </div>
-                            <div class="progress-item finish">
-                                <i class="text-white fas fa-check"></i>
+    <section class="mb-lg-10">
+        <div class="container">
+            <div class="bg-cover header-banner d-flex justify-content-center" style="background-image: url(https://images.unsplash.com/photo-1501721358449-1505ca840822?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80);">
+                <div class="col-8 col-md-4 d-flex justify-content-center flex-column">
+                    <div class="row">
+                        <div class="col-12 mb-30">
+                            <div class="progress-steps-dark w-100">
+                                <div class="progress-item finish">
+                                    <i class="text-white fas fa-check"></i>
+                                </div>
+                                <div class="progress-item finish">
+                                    <i class="text-white fas fa-check"></i>
+                                </div>
+                                <div class="progress-item finish">
+                                    <i class="text-white fas fa-check"></i>
+                                </div>
                             </div>
                         </div>
+                        <div class="col-12 mb-30">
+                            <h1 class="text-center  font-weight-bold" style="letter-spacing: 0.25rem;">付款成功</h1>
+                        </div>
                     </div>
-                    <div class="col-12 mb-30">
-                        <h1 class="text-center  font-weight-bold" style="letter-spacing: 0.25rem;">付款成功</h1>
-                    </div>
+                    <a href="index.html" class="btn btn-lg btn-secondary p-3 d-none d-md-block">繼續逛逛</a>
                 </div>
-                <a href="index.html" class="btn btn-lg btn-accent p-3 d-none d-md-block">繼續逛逛</a>
             </div>
         </div>
-        <div class="container p-0">
-            <a href="index.html" class="btn btn-lg btn-accent p-3 d-block d-md-none">繼續逛逛</a>
-
-        </div>
+        <a href="index.html" class="btn btn-lg btn-secondary p-3 d-block d-md-none">繼續逛逛</a>
     </section>
 
     <!--　footer -->
     <footer>
         <!-- 信箱 -->
-        <div class="container-fluid bg-text-color">
+        <div class="container-fluid bg-primary">
             <div class="container ">
                 <div class="row py-30">
                     <div class="col-md-6 pb-30 pb-md-0 d-flex align-items-center justify-content-center">
                         <img class="img-fluid" src="images/logo.png" width="50" alt="">
                         <h4 class="text-white">訂閱你我的香噴噴郵件</h4>
                     </div>
-                    <div class="col-md-6  text-center">
+                    <div class="col-md-6 text-center">
                         <div class="input-group">
                             <div class="input-group-prepend">
                                 <i class="input-group-text bg-white text-text-color border-0 fas fa-envelope px-3"></i>
                             </div>
                             <input type="email" class="form-control border-0 p-4" required>
                             <div class="input-group-append">
-                                <a href="#" class="input-group-text border-0 btn px-3 bg-accent">
+                                <a href="#" class="input-group-text bg-accent border-0 btn px-3">
                                     <i class=" fas fa-arrow-right"></i></a>
                             </div>
                         </div>
@@ -113,31 +111,33 @@
             </div>
         </div>
         <!-- 表尾 -->
-        <div class="container-fluid bg-light">
+        <div class="container-fluid bg-secondary">
             <div class="container py-30">
                 <div class="row ">
                     <div class="col-md-6 d-flex flex-column justify-content-between">
-                        <h1 class="text-primary font-weight-bold">亞弗雷麵包坊</h1>
-                        <div class="text-primary">
+                        <h1 class="text-text-color font-weight-bold">亞弗雷麵包坊</h1>
+                        <div class="text-text-color">
                             04-1234-567 <br>
                             aexck8836660@gmail.com <br>
                             500彰化縣彰化市溫泉路31號 <br>
                         </div>
                     </div>
                     <div class="col-md-6 d-flex justify-content-end ">
-                        <h4 class="m-0 d-none d-md-block word-colum text-primary font-weight-bold"
+                        <h4 class="m-0 d-none d-md-block word-colum text-text-color font-weight-bold"
                             style="letter-spacing: 0.5rem;">
                             今天是個<br>
                             　吃麵包的好日子</h4>
                     </div>
                 </div>
                 <div class="row mt-3">
-                    <div class="col-md-6">
-                        <a href="#" style="font-size:32px;"><i class="fab fa-facebook-square"></i></a>
-                        <a href="#" style="font-size:32px;"><i class="fab fa-twitter-square"></i></a>
-                        <a href="#" style="font-size:32px;"><i class="fab fa-line"></i></a>
+                    <div class="col-md-6 ">
+                        <a href="#" class="text-text-color" style="font-size:32px;"><i
+                                class="fab fa-facebook-square"></i></a>
+                        <a href="#" class="text-text-color" style="font-size:32px;"><i
+                                class="fab fa-twitter-square"></i></a>
+                        <a href="#" class="text-text-color" style="font-size:32px;"><i class="fab fa-line"></i></a>
                     </div>
-                    <div class="col-md-6 d-flex align-items-center justify-content-md-end text-primary">
+                    <div class="col-md-6 d-flex align-items-center justify-content-md-end text-text-color">
                         © 2019 Bread All Rights Reserved
                     </div>
                 </div>
