--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <div class="bg-cover header-banner"style="background-image: url(https://images.unsplash.com/photo-1523294587484-bae6cc870010?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1464&q=80);">
             </div>
         </div>
-        <div class="container header-menu px-0">
-            <div class="row justify-content-center no-gutters">
-                <div class="col-md-10">
+        <div class="container header-menu">
+            <div class="row justify-content-center">
+                <div class="col-md-10 px-0">
                     <div class="row no-gutters">
                         <a href="#" class="col text-dark bg-cover"
                             style=" background-image: url(https://images.unsplash.com/photo-1509440159596-0249088772ff?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=752&q=80);">
