--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             </div>
                             <div class="col-3 d-none d-lg-block">
                                 <h2 class="word-colum text-dark text-title">
-                                    為什麼——<br>　選擇吃麵包？</h2>
+                                    為什麼<br>　選擇吃麵包？</h2>
                             </div>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                             </div>
                             <div class="col-3 d-none d-lg-block">
                                 <h2 class="word-colum text-dark text-title">
-                                    為什麼——<br>　一定要吃麵包？</h2>
+                                    為什麼<br>　一定要吃麵包？</h2>
                             </div>
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                 <br>是不需要理由的
             </h2>
             <h2 class="text-title d-none d-lg-block word-colum text-dark ">
-                想吃麵包－－
+                想吃麵包
                 <br>　是不需要理由的
             </h2>
         </div>
